    and 3.0 are released under different versions of the GPL.  Changed
    debian/rules accordingly.
  * debian/in/copyright: Added the mention that Octave 2.1 is released under
    version 2 or later of the GPL (closes: #435205)
  * debian/patches/50_compile-with-g++-4.3.dpatch: Fixes for compiling the
    octave2.1 with the GCC 4.3 suite (closes: #417486)

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 22 Feb 2008 10:30:25 +0100

octave3.0 (1:3.0.0-4) unstable; urgency=low

  [ Rafael Laboissiere ]
  * Uploaded to unstable
  * debian/control: Build-depend on g++-4.3 on arm.  This is a desperate
    attempt to see whether we can get rid of the segfault problem on arm
    (cf Bug#458852)
  * debian/rules: Use g++ and gcc 4.3 on arm architecture

  [ Thomas Weber ]
  * in/PACKAGE.conf: sync with upstream's main-rcfile (closes: 466723, 466264)

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 21 Feb 2008 11:24:13 +0100

octave3.0 (1:3.0.0-3) experimental; urgency=low

  * Added dpatches:
    + 50_include-cstring-mxarray: Compile successfully with GCC 4.3
    + 50_drop-lo-manpages.dpatch: Drop unknown macros in some manpages
      (Lintian warning)
  * debian/in/control: Build-depends in libsuitesparse-3.1.0 >= 3.1.0-2
    since this version have appropriate sonames for the SuiteSparse
    libraries

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 08 Feb 2008 13:36:01 +0100

octave3.0 (1:3.0.0-2) experimental; urgency=low

  [ Rafael Laboissiere ]
  * debian/in/control:
    + Put the -htmldoc package in section "doc", agreeing with the
      override set by the Debian Installer
    + Generate dummy octave2.9* packages that depend on the corresponding
      octave3.0 ones. For this to work, we have to reintroduce the epoch in
      the package version number.  Also, do not conflict/replace/provide
      the octave2.9* anymore (closes: #463039).  Thanks to Steve Langasek
      for the discussion and the suggestions.